AC_INIT(src/Reventloop.c)


USE_GTK=${USE_GTK-"yes"}
USE_TK=${USE_TK-"yes"}
USE_CARBON=${USE_CARBON-"check"}

R_INCLUDE_DIR=${R_INCLUDE_DIR-"${R_HOME}/src/include"}

AC_ARG_ENABLE(gtk, [--enable-gtk   control support for Gtk. (yes or no) ], USE_GTK="${enableval}")
AC_ARG_ENABLE(tk, [--enable-tk   control support for Tk. (yes or no) ],[USE_TK="${enableval}"; echo "Using Tk: ${USE_TK}"])
AC_ARG_ENABLE(carbon, [--enable-carbon   control support for Carbon. (yes or no) ], USE_CARBON="${enableval}")


AC_ARG_WITH(R-includes, [--with-R-includes=<dir>  the name of the directory containing the R header files that are not installed. This is <R distribution>/src/include], R_INCLUDE_DIR="${withval}")


AC_ARG_WITH(tk-config, [--with-tk-config=file	specify location of tkConfig.sh], TK_CONFIG="${withval}")

AC_ARG_WITH(gtk-cflagss, [--with-gtk-cflags=value	specify compiler flags to be used when compiling Gtk code (usually of the form -I<include directory> ... )], GTK_CONFIG_CFLAGS=${withval})
AC_ARG_WITH(gtk-libs, [--with-gtk-libs=value		specify linker flags to be used when linking Gtk libraries (usually of the form -L<directory> -lgtk)], GTK_CONFIG_LIBS=${withval})

AC_ARG_WITH(gtk-libs, [--with-gtk-libs=value		specify linker flags to be used when linking Gtk libraries (usually of the form -L<directory> -lgtk)], GTK_CONFIG_LIBS=${withval})


if test ! -d ${R_INCLUDE_DIR} ; then
  echo "You must specify a directory for locating the internal (non-installed) R header files such as IOStuff.h"
  echo "Use --with-R-includes=<dir>"
  exit 1
 
  if test ! -r ${R_INCLUDE_DIR}/IOStuff.h ; then
   echo "Cannot find IOStuff.h in ${R_INCLUDE_DIR}."
   echo "Specify the correct directory using"
   echo "     --with-R-includes"
   echo "or via the environment variable R_INCLUDE_DIR"
   exit 1
  fi
fi

AC_SUBST(R_INCLUDE_DIR)

host_os=`uname -s`
dnl Doesn't like AC_CANONICAL_HOST. Complains about
dnl no install-sh
case "${host_os}" in
  Darwin)
    if test "${USE_CARBON}" = "check" ; then
      USE_CARBON="yes" 
    fi
    ;;
  *)
      USE_CARBON="no" ;;
esac



if test "${USE_CARBON}" = "yes" ; then
   dnl Don't know where to look for Carbon.
  CARBON_CFLAGS="-I/Developer/Headers/FlatCarbon"
else
  CARBON_CFLAGS="-DNO_CARBON"

fi

if test "${USE_GTK}" = "yes" ; then

AC_PATH_PROG(GTK_CONFIG, gtk-config)

if test -n "${GTK_CONFIG}" ; then
  USE_GTK="yes"
  if test -z "${GTK_CONFIG_CFLAGS}" ; then
    GTK_CONFIG_CFLAGS="`${GTK_CONFIG} --cflags`"
  fi

  if test -z "${GTK_CONFIG_LIBS}" ; then
    GTK_CONFIG_LIBS="`${GTK_CONFIG} --libs`"
  fi
fi
else
  GTK_CONFIG_CFLAGS="-DNO_GTK"
fi # USE_GTK = yes


if test "${USE_TK}" = "yes" ; then

 if test -z "${TK_CONFIG}" ; then
  for dir in /usr/local/lib /usr/lib /lib; do
   if test -r ${dir}/tkConfig.sh ; then
    TK_CONFIG="${dir}/tkConfig.sh"
    echo "Using ${TK_CONFIG} for Tk configuration informtion"
    break 
   fi
  done
 fi

 if test -n "${TK_CONFIG}" ; then
  . ${TK_CONFIG}
  R_TK_CFLAGS="${TK_DEFS} ${TK_XINCLUDES} -DHAVE_TK"
  R_TK_LIBS="${TK_LIB_SPEC}"  # Should use ${TK_LIBS}, but my system doesn't like -liee 
 else
   echo "Cannot find tkConfig.sh"
   USE_TK="no"
 fi


 if test -z "${TCL_CONFIG}" ; then
  for dir in /usr/local/lib /usr/lib /lib; do
   if test -r ${dir}/tclConfig.sh ; then
    TCL_CONFIG="${dir}/tclConfig.sh"
    echo "Using ${TCL_CONFIG} for Tcl configuration informtion"
    break 
   fi
  done
 fi

 if test -n "${TCL_CONFIG}" ; then
  . ${TCL_CONFIG}
  R_TCL_FLAGS="${TCL_DEFS}"
  R_TCL_LIBS="${TCL_LIB_SPEC}"
 else 
   USE_TK="no"
   R_TK_CFLAGS=""
   R_TK_LIBS=""
   R_TCL_CFLAGS=""
   R_TCL_LIBS=""
 fi
else 
 R_TCL_CFLAGS="-DNO_TCL_TK"

fi # USE_GTK = yes

AC_SUBST(R_TK_CFLAGS)
AC_SUBST(R_TK_LIBS)

AC_SUBST(R_TCL_CFLAGS)
AC_SUBST(R_TCL_LIBS)

AC_SUBST(GTK_CONFIG_CFLAGS)
AC_SUBST(GTK_CONFIG_LIBS)


AC_SUBST(CARBON_CFLAGS)


echo "*********************************************"
echo ""
echo "  Gtk support:      ${USE_GTK}"

if test "${USE_GTK}" = "yes" ; then
 echo "  Compiler flags:  ${GTK_CONFIG_CFLAGS}"
 echo "  Linker flags:    ${GTK_CONFIG_LIBS}"
fi

echo ""

echo "  Tk support:       ${USE_TK}"
if test "${USE_TK}" = "yes" ; then
 echo "  Compiler flags:  ${R_TK_CFLAGS}"
 echo "  Linker flags:    ${R_TK_LIBS}"
fi

echo ""
echo "*********************************************"

AC_OUTPUT(src/Makevars)